--- a/index.html
+++ b/index.html
@@ -4,10 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assests/reset.css">
-    <link rel="stylesheet" href="./assests/style.css">
-    <title>Danny's Portfolio</title>
+    <link rel="stylesheet" href="./assests/style.css">    <title>Enter the Hype</title>
 </head>
 <body>
+<header>
+    <h1>Danny's Portfolio</h1>
+    <nav> 
+        <ul>
+        <li><a href="#About-Me">About Me</a></li>
+        <li><a href="#Projects">Projects</a></li>
+        <li><a href="#Contact-Me">Contact Me</a></li>
+        </ul>
+    </nav>    
+</header>
+<main>
+    <div class="box">
+        <h2 id="About-Me" class="box-title">About Me</h2>
+        <div class="card">
+        <img src="./assests/images/Danny.jpeg" alt="An animated picutre of the portfolio creator" width="300" height="300"> 
+        <ul>Hello! I'm Danny, a passionate and detail-oriented web developer with a love for crafting clean and efficient code. I thrive on turning complex ideas into elegant, user-friendly websites. 
+            My journey into the world of web development began during my undergraduate studies, where I discovered the power of coding to bring creative visions to life.</ul>
+        <ul>With a degree in Mathematics and Coding Bootcamp certificate (WIP) I would be a valuable asset at any place of employment. I hope to be an asset to each employer </ul>
+        </div>
+    </div>
+    <section class="box">
+    <h2 id="Projects" class="box-title">Projects</h2>
+    <ul>Here you can find a few projects to show my range of abilites and attention to detail.</ul>
+    <div class="row">
+        
+        <div class="card">  
+            <h3>Search Engine Optimization</h3>
+            <p>Here I was tasked with increasing the accecibilty of the website and increasing the visibility by search engines.</p>
+            <a href="https://dannym15.github.io/YYH/#search-engine-optimization"><img src="./assests/images/Horiseon.PNG" alt="logo for the website Horiseon"></a>
+        </div>
+
+
+    <div class="row">
+        <div class="card">  
+            <h3>Project Title</h3>
+            <ul>
+            <p>future project will be shown here!</p>
+            <img src="/assests/images/icon_yusuke.png" alt="an icon of yusuke urameshi from the hit anime yu yu hakusho" width="100" height="100">
+            </ul>
+
+        </div>
+    </div>
+    <div class="row">
+        <div class="card">  
+            <h3>Project Title</h3>
+            <ul>
+            <p>future project will be shown here!</p>
+            <img src="/assests/images/icon_kuwabara.png" alt="an icon of Kuwabara from the hit anime yu yu hakusho" width="100" height="100">    
+            </ul>
+
+        </div>
+    </div>    
+    <div class="row">
+        <div class="card">  
+            <h3>Project Title</h3>
+            <ul>
+            <p>future project will be shown here!</p>
+            <img src="/assests/images/icon_hiei.png" alt="an icon of Hiei from the hit anime yu yu hakusho" width="100" height="100">
+            </ul>
+
+        </div>
+    </div>
+</section>
+<div class="box">
+    <h2 id="Contact-Me" class="box-title">Contact Me</h2>
+    <li class="row"><a href="merinodanny15@gmail.com">My Email</a></li>
+    <li class="row">(714)777-7777</li>
+    <li class="row"><a href="https://github.com/DannyM15">My github page</a></li>
+</div>
+
+
+</main>
+
+
 
 </body>
 </html>
